# libraft

./: .gitignore  CMakeLists.txt  README.md  acl.props  build.sh  libraft.props  libraft.sln  libraft.vcxproj  libraft.vcxproj.filters
demo/: CMakeLists.txt  README.md
demo/lib_memkv_proto/include/: addr_info.h  gson.h
demo/lib_memkv_proto/src/: gson.cpp
demo/lib_memkv_proto/stubs/: cluster_config.stub  gen.sh
demo/memkv/: CMakeLists.txt  memkv.h  memkv.vcxproj  memkv.vcxproj.filters
demo/memkv/include/: memkv.h  memkv_proto.gson.h  memkv_service.h  raft_config.gson.h  raft_config.h
demo/memkv/src/: .memkv_service.cpp.swp  main.cpp  memkv.cpp  memkv_proto.gson.cpp  memkv_service.cpp  raft_config.gson.cpp
demo/memkv_client/: CMakeLists.txt  cluster_config.json
demo/memkv_client/include/: memkv_client.h
demo/memkv_client/src/: main.cpp
demo/memkv_proto/: CMakeLists.txt
demo/memkv_proto/include/: memkv_proto.h
demo/memkv_proto/stubs/: raft_config.stub
demo/memkv_server/: CMakeLists.txt  memkv.vcxproj  raft_config.json
demo/memkv_server/include/: memkv_service.h
demo/memkv_server/src/: main.cpp  memkv_config.cpp  memkv_service.cpp
include/: common.hpp  election_timer.h  log.hpp  log_compaction.h  log_compaction_worker.h  log_manager.h  metadata.h  mmap_log.hpp  mmap_log_manager.h  node.h  node_service.h  peer.h  raft.hpp  server.hpp  service.h  snapshot.h  vote_timer.h
include/proto_gen/: raft.pb.h
protos/: clean.bat  gen_proto.bat  gen_proto.sh  raft.pb.cc  raft.pb.h  raft.proto
src/: election_timer.cpp  log_compaction.cpp  log_compaction_worker.cpp  log_manager.cpp  metadata.cpp  mmap_log.cpp  mmap_log_manager.cpp  node.cpp  peer.cpp  raft.cpp  snapshot.cpp
src/proto_gen/: raft.pb.cc
tests/: CMakeLists.txt
tests/metadata_test/: main.cpp
tests/mmlog_manager_test/: main.cpp  mmlog_manager_test.vcxproj
tests/mmlog_manager_test/mmap_log_manger_test/: 24089.log.index  28177.log.index  30001.log.index  34089.log.index  38177.log.index  40001.log.index  44089.log.index  48177.log.index  50001.log.index  54089.log.index  58177.log.index
tests/mmlog_test/: main.cpp  mmap.log.index  mmlog_test.vcxproj
tests/node_test/: main.cpp
tests/protobuf_test/: main.cpp
